--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Cells/FriendTableViewCell.xib
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Cells/FriendTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="less_1_IOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="VKAppClone" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="396" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -24,7 +24,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="2Nc-fy-yEt" customClass="AvatarView" customModule="less_1_IOS" customModuleProvider="target">
+                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="2Nc-fy-yEt" customClass="AvatarView" customModule="VKAppClone" customModuleProvider="target">
                         <rect key="frame" x="20" y="21" width="50" height="50"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KFZ-kd-bgq">
@@ -59,9 +59,9 @@
                 <constraints>
                     <constraint firstItem="3Ro-zp-WTw" firstAttribute="centerY" secondItem="2Nc-fy-yEt" secondAttribute="centerY" id="91r-mY-Lac"/>
                     <constraint firstItem="3Ro-zp-WTw" firstAttribute="leading" secondItem="2Nc-fy-yEt" secondAttribute="trailing" constant="61" id="E6Q-qK-HpO"/>
-                    <constraint firstItem="2Nc-fy-yEt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="KiM-qG-xrH"/>
+                    <constraint firstItem="2Nc-fy-yEt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="999" constant="20" id="KiM-qG-xrH"/>
                     <constraint firstItem="2Nc-fy-yEt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="k7d-No-ec2"/>
-                    <constraint firstAttribute="bottom" secondItem="2Nc-fy-yEt" secondAttribute="bottom" constant="22" id="mkW-6f-ADN"/>
+                    <constraint firstAttribute="bottom" secondItem="2Nc-fy-yEt" secondAttribute="bottom" priority="999" constant="22" id="mkW-6f-ADN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
