--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Cells/GroupTableViewCell.xib
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Cells/GroupTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="GroupTableViewCell" customModule="less_1_IOS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="GroupTableViewCell" customModule="VKAppClone" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="404" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -38,7 +38,7 @@
                     <constraint firstItem="oSB-h3-hfJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="dTM-KW-Rgw"/>
                     <constraint firstItem="oSB-h3-hfJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="qLs-Op-xIz"/>
                     <constraint firstItem="Am2-sD-YXS" firstAttribute="centerY" secondItem="oSB-h3-hfJ" secondAttribute="centerY" id="s9A-38-Ph6"/>
-                    <constraint firstAttribute="bottom" secondItem="oSB-h3-hfJ" secondAttribute="bottom" constant="22" id="xfr-NA-P9d"/>
+                    <constraint firstAttribute="bottom" secondItem="oSB-h3-hfJ" secondAttribute="bottom" priority="999" constant="22" id="xfr-NA-P9d"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
