--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
@@ -183,9 +183,7 @@
                     <connections>
                         <segue destination="OV9-3Q-zAd" kind="relationship" relationship="viewControllers" id="ZfX-We-0BZ"/>
                         <segue destination="NYj-Z4-dJt" kind="relationship" relationship="viewControllers" id="aPH-Sl-6T2"/>
-                        <segue destination="IQN-PV-Frw" kind="relationship" relationship="viewControllers" id="fRa-XE-ZEP"/>
                         <segue destination="Stm-lh-B9Z" kind="relationship" relationship="viewControllers" id="qH0-v1-z7U"/>
-                        <segue destination="i3C-ql-rzz" kind="relationship" relationship="viewControllers" id="Umv-Nb-mgn"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rLL-UA-qyJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -281,15 +279,15 @@
         <scene sceneID="MQO-DX-qTl">
             <objects>
                 <viewController storyboardIdentifier="PhotoGalleryViewController" modalTransitionStyle="flipHorizontal" id="yAc-tE-k8s" customClass="PhotoGalleryViewController" customModule="VKAppClone" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="XB0-1q-dYd">
+                    <view key="view" contentMode="scaleToFill" id="XB0-1q-dYd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9o-Mi-XWk">
-                                <rect key="frame" x="59" y="203" width="300" height="482"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c9o-Mi-XWk">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                 <subviews>
-                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DfH-ci-bK0">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="500"/>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DfH-ci-bK0">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="758"/>
                                         <color key="backgroundColor" systemColor="systemGray4Color"/>
                                         <color key="tintColor" systemColor="systemPinkColor"/>
                                         <gestureRecognizers/>
@@ -297,14 +295,12 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray4Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="8kH-hO-UeH"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="500" id="F5k-Ls-yuf"/>
+                                    <constraint firstAttribute="bottom" secondItem="DfH-ci-bK0" secondAttribute="bottom" constant="50" id="N3R-nW-AXW"/>
                                     <constraint firstAttribute="bottom" secondItem="DfH-ci-bK0" secondAttribute="bottom" id="XzV-1v-bAL"/>
                                     <constraint firstItem="DfH-ci-bK0" firstAttribute="leading" secondItem="c9o-Mi-XWk" secondAttribute="leading" id="djB-Ub-VN0"/>
                                     <constraint firstItem="DfH-ci-bK0" firstAttribute="top" secondItem="c9o-Mi-XWk" secondAttribute="top" id="eQS-mr-o1d"/>
-                                    <constraint firstAttribute="width" constant="300" id="fWe-oI-MSe"/>
                                     <constraint firstAttribute="trailing" secondItem="DfH-ci-bK0" secondAttribute="trailing" id="pnC-Xi-VYm"/>
-                                    <constraint firstAttribute="height" constant="500" id="zVV-fY-TNG"/>
+                                    <constraint firstItem="DfH-ci-bK0" firstAttribute="top" secondItem="c9o-Mi-XWk" secondAttribute="top" constant="50" id="z7n-Be-UdM"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -313,7 +309,11 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="c9o-Mi-XWk" firstAttribute="leading" secondItem="7Dy-2U-BoZ" secondAttribute="leading" constant="59" id="93z-tI-7mA"/>
+                            <constraint firstItem="c9o-Mi-XWk" firstAttribute="leading" secondItem="7Dy-2U-BoZ" secondAttribute="leading" id="d9k-dk-GnL"/>
                             <constraint firstItem="7Dy-2U-BoZ" firstAttribute="trailing" secondItem="c9o-Mi-XWk" secondAttribute="trailing" constant="59" id="eVf-02-50F"/>
+                            <constraint firstItem="7Dy-2U-BoZ" firstAttribute="trailing" secondItem="c9o-Mi-XWk" secondAttribute="trailing" id="nwC-Xd-o0T"/>
+                            <constraint firstItem="7Dy-2U-BoZ" firstAttribute="bottom" secondItem="c9o-Mi-XWk" secondAttribute="bottom" id="u6F-tN-otp"/>
+                            <constraint firstItem="c9o-Mi-XWk" firstAttribute="top" secondItem="7Dy-2U-BoZ" secondAttribute="top" id="vXg-ZD-cD4"/>
                             <constraint firstItem="7Dy-2U-BoZ" firstAttribute="bottom" secondItem="c9o-Mi-XWk" secondAttribute="bottom" constant="177" id="vg0-Kf-cFw"/>
                             <constraint firstItem="c9o-Mi-XWk" firstAttribute="top" secondItem="7Dy-2U-BoZ" secondAttribute="top" constant="159" id="ycN-dI-99N"/>
                         </constraints>
